Formulário de cadastro e requisição POST para incluir nova forma de pagamento

--- a/index.html
+++ b/index.html
@@ -26,10 +26,13 @@
   </style>
 </head>
 <body>
-  <button id="botao" class="btn btn-primary">Fazer requisição</button>
-  <div id="conteudo"></div>
-
   <div class="container">
+
+    <div class="row">
+      <button id="botao" class="btn btn-primary">Fazer requisição Teste</button>
+      <div id="conteudo"></div>
+    </div>
+
     <div class="row">
       <button id="btn-consultar" class="btn btn-primary">Consultar</button>
     </div>
@@ -49,6 +52,17 @@
         </tbody>
       </table>
     </div>
+
+    <div class="row">
+      <form>
+        <div class="form-group">
+          <label for="campo-descricao">Descrição</label>
+          <input type="text" class="form-control" id="campo-descricao">
+        </div>
+        <button type="button" class="btn btn-primary" id="btn-cadastrar">Cadastrar</button>
+      </form>
+    </div>
+    
   </div>
 
   <script src="//code.jquery.com/jquery-3.4.1.min.js"></script>
