--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
           <tr>
             <th>Código</th>
             <th>Descrição</th>
+            <th>Ações</th>
           </tr>
         </thead>
         <tbody>
