Consulta por código para testar cache control da API

--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
     </div>
 
     <div class="row">
+      <div class="form-group">
+        <label for="campo-codigo">Código</label>
+        <input type="text" class="form-control" id="campo-codigo">
+      </div>
+    </div>
+
+    <div class="row">
       <button id="btn-consultar" class="btn btn-primary">Consultar</button>
     </div>
 
